# nancyplayer

./: CMakeLists.txt  README.md
DOCUMENTS/: Songlengths.md5
include/: config.h  file_browser.h  player.h  search.h  stil_reader.h  tui.h
src/: config.cpp  file_browser.cpp  main.cpp  player.cpp  search.cpp  stil_reader.cpp  tui.cpp
